@@ -1,3 +1,5 @@
+2004-07-25: Adding 'nthrest'
+	
 2004-07-10: Simplified Qvar as type	
 	
 2004-07-09: Added gen-var
